Check class collisions for Notifier generator
Like Rails, these commands should be equivalent:

    rails g noticed:notifier Example
    rails g noticed:notifier ExampleNotifier

They should both produce `app/notifiers/example_notifier.rb` and contain
the `class ExampleNotifier` definition.

Rails does this using `check_class_collision suffix: "Notifier"` and
adjusting the filename and templates to ensure the notifier is included
there.

--- a/lib/generators/noticed/templates/notifier.rb.tt
+++ b/lib/generators/noticed/templates/notifier.rb.tt
@@ -2,7 +2,7 @@
 #
 # <%= class_name %>.with(record: @post, message: "New post").deliver(User.all)
 
-class <%= class_name %> < Noticed::Event
+class <%= class_name %>Notifier < Noticed::Event
   # Add your delivery methods
   #
   # deliver_by :email do |config|
