--- a/lib/generators/noticed/templates/notifier.rb.tt
+++ b/lib/generators/noticed/templates/notifier.rb.tt
@@ -2,7 +2,7 @@
 #
 # <%= class_name %>.with(record: @post, message: "New post").deliver(User.all)
 
-class <%= class_name %>Notifier < Noticed::Event
+class <%= class_name %>Notifier < ApplicationNotifier
   # Add your delivery methods
   #
   # deliver_by :email do |config|
